--- a/frontend/src/components/Asset/Asset.css
+++ b/frontend/src/components/Asset/Asset.css
@@ -23,7 +23,6 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 .assetInfoContainer {
   gap: 10px;
@@ -55,9 +54,8 @@
   border: none;
 }
 .assetImage {
-  width: 360px;
-  height: 360px;
-  object-fit: cover;
+  max-width: 360px;
+  max-height: 360px;
 }
 .buttonContainer {
   gap: 48px;
@@ -94,8 +92,11 @@
   cursor: pointer;
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1000px) {
   .assetContainer {
     flex-direction: column-reverse;
+  }
+  .assetImage {
+    max-width: 100vw;
   }
 }
